<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:padding="8dp"
    android:rowCount="10"
    android:useDefaultMargins="true">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_filter"
        android:textSize="24sp"
        tools:text="Filter Settings" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center"
        android:text="@string/txt_class"
        android:textSize="18sp"
        tools:text="Class" />

    <LinearLayout
        android:id="@+id/Classes1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/barbarian"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_barbarian"
            tools:text="Barbarian" />

        <CheckBox
            android:id="@+id/bard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_bard"
            tools:text="Bard" />

        <CheckBox
            android:id="@+id/cleric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_cleric"
            tools:text="Cleric" />

        <CheckBox
            android:id="@+id/druid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_druid"
            tools:text="Druid" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Classes2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/fighter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/class_fighter"
            tools:text="Fighter" />

        <CheckBox
            android:id="@+id/monk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/class_monk"
            tools:text="Monk" />

        <CheckBox
            android:id="@+id/paladin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_paladin"
            tools:text="Paladin" />

        <CheckBox
            android:id="@+id/ranger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_ranger"
            tools:text="Ranger" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Classes3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/rogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_rogue"
            tools:text="Rogue" />

        <CheckBox
            android:id="@+id/sorcerer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_sorcerer"
            tools:text="Sorcerer" />

        <CheckBox
            android:id="@+id/warlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_warlock"
            tools:text="Warlock" />

        <CheckBox
            android:id="@+id/wizard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/class_wizard"
            tools:text="Wizard" />

    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|center"
        android:text="@string/txt_spelllvl"
        android:textSize="18sp"
        tools:text="Level" />

    <LinearLayout
        android:id="@+id/lvl0_4"
        android:layout_width="match_parent"
        android:layout_row="1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cantrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_cantrip"
            tools:text="Cantrip" />

        <CheckBox
            android:id="@+id/lvl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl1"
            tools:text="Lvl. 1" />

        <CheckBox
            android:id="@+id/lvl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl2"
            tools:text="Lvl. 2" />

        <CheckBox
            android:id="@+id/lvl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl3"
            tools:text="Lvl. 3" />

        <CheckBox
            android:id="@+id/lvl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl4"
            tools:text="Lvl. 4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvl5_9"
        android:layout_width="match_parent"
        android:layout_row="2"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/lvl5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/spell_lvl5"
            tools:text="Lvl. 5" />

        <CheckBox
            android:id="@+id/lvl6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl6"
            tools:text="Lvl. 6" />

        <CheckBox
            android:id="@+id/lvl7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl7"
            tools:text="Lvl. 7" />

        <CheckBox
            android:id="@+id/lvl8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl8"
            tools:text="Lvl. 8" />

        <CheckBox
            android:id="@+id/lvl9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/spell_lvl9"
            tools:text="Lvl. 9" />

    </LinearLayout>

    <Button
        android:id="@+id/applyall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_row="9"
        android:text="@string/btn_applyall"
        tools:text="Apply All" />

</GridLayout>